  selected multiple times in quick succession.
* Current file name was not cleared and button New Game not enabled
  after opening a file from clipboard.
* Comment scrolling did not always work.
* Avoid jumping of splashscreen icon on Android.
* Shared MIME Info was missing a pattern for detecting Classic 3-player
  game files independent of the file extension.
* Development tool twogtp did not resolve ties as a win for the second
  player in two-player Callisto.


Version 16.2 (16 Jan 2019)
==========================

* As a workaround for platforms without support for Qt5WebView, Pentobi can
  now be built such that the help is displayed in an external web browser.
  This option will automatically be used if Qt5WebView is not found or if the
  cmake option -DPENTOBI_OPEN_HELP_EXTERNALLY=ON is used. Note that this
  requires that a web browser is installed.
* The help files are no longer compiled into the resources but installed
  again in DATAROOTDIR/help.
* Fixed keyboard navigation in file dialog.
* Status message was not shown after successful Export/ASCII Art and
  Android Media Scanner was not informed to make the saved file
  immediately visible to MTP-connected devices.
* Changed new-game icon, which looked too much like a ratings/bookmarks
  icon.
* Fixed compilation on systems without sys/sysctl.h header.
* Enabled QML compiler again, now that QTBUG-70976 has been fixed, which
  broke translations in Qt 5.12 beta releases.
* Changed android.app_extract_android_style in Android manifest from none
  to minimal, which is recommended for Quick Controls 2 apps (see
  QTBUG-69810 and comments in QTBUG-71902)


Version 16.1 (11 Oct 2018)
==========================

* Fixed alignment issues of pieces on board if high-DPI scaling is used.


Version 16.0 (10 Oct 2018)
==========================

* The desktop version of Pentobi now uses the same QtQuick-based GUI as
  the Android version, which makes the desktop version support all