@@ -11,6 +11,8 @@ Version 16.2.x (v16-fixes)
 * Avoid jumping of splashscreen icon on Android.
 * Shared MIME Info was missing a pattern for detecting Classic 3-player
   game files independent of the file extension.
+* The Android version now interactively asks for permission when opening
+  or saving a game if storage permission has not yet been granted.
 * Development tool twogtp did not resolve ties as a win for the second
   player in two-player Callisto.
 
